many improvements for STL file handling: can comp superSTL file with all normals as preprocessor

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -57,7 +57,7 @@ block_dist=sfc_hilbert;
 ;only once in the first iteration
 coarsening_indicator=threshold-state-vector;
 ; use normalization for eps or not? normalization is done with INFTY norm currently. default
-; is no normalization (0). 
+; is no normalization (0).
 eps_normalized=1;
 ; which components to use for coarsening_indicator? default is all components.
 ; active only if coarsening_indicator=threshold-state-vector. select the components, set as
@@ -402,6 +402,10 @@ penalization=1;
 ; a time-independent part (fixed walls, homogeneous forcing)? or both? WABBIT needs to know
 ; that since we try to create the time-independent mask function only once, but the time-dependent
 ; part of course in every time step.
+; NOTE: the flag threshold_mask has a critical impact here: if it is false, it is not guaranteed that the
+; fluid-solid interface is on Jmax or Jmax-1, hence the technique of using a pre-generated static mask function
+; that can be added to the time-dependent part cannot be used. If the mask function is expensive to compute,
+; ensure that threshold_mask is set.
 mask_time_dependent_part=1;
 mask_time_independent_part=1;
 ; smooth mask for penalization term [0,1]. If the obstacle moves, this flag should
