--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -18,7 +18,7 @@ periodic_BC=1 1;
 [Blocks]
 ; size of each block, must be odd (17, 33, 65 etc),
 ; if given one value this is meant for all directions, or specify value for each direction
-number_block_nodes=17 17 17;
+number_block_nodes=17 17;
 ; ghost nodes for each block. It is possible that in current versions, one can only
 ; set even values
 number_ghost_nodes=4;
@@ -129,6 +129,18 @@ dt_max=0.0;
 ; the number of Krylov subspaces M_krylov can be set.
 ; [ RungeKuttaGeneric, Krylov, RungeKuttaChebychev ]
 time_step_method=RungeKuttaGeneric;
+; The usual RungeKuttaChebychev method contains a number of hard coded schemes for different
+; number of stages "s" and the fixed damping coefficient eps=10.0 (see Verwer and Sommeijer)
+; if you want to use another RKC scheme, you can do so by settting it up in this INI-file.
+; Provide coefficients with length "s". they are usually precomputed in python.
+RKC_custom_scheme=no;
+; (complicated) coefficients following Verwer & Sommeijer follow.
+; longest scheme is 60 stages.
+RKC_mu=;
+RKC_mu_tilde=
+RKC_nu=
+RKC_gamma_tilde=
+RKC_c=
 ; number of stages "s" for the RungeKuttaChebychev method. Memory is always 6 registers
 ; independent of stages.
 s=10;
@@ -219,6 +231,9 @@ compute_flow=1;
 
 [Sponge]
 ; sponge term, used in ACM module to mimick outflow conditions for pressure waves
+; NOTE (ACM): when the sponge is used, be sure to allow for mask_time_dependent_part=1. Even
+; though the sponge function is not explicitly time-dependent, it is treated as such because
+; the sponge does not have to be at the maximum refinement level.
 use_sponge=0;
 ; shape of the sponge. the tradional form (default) is "rect", but we have a smoothed
 ; version with round corners which is called "p-norm". It has the parameter p_sponge,
