--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -138,8 +138,21 @@ dt_max=0.0;
 ; the number of Krylov subspaces M_krylov can be set.
 ; [ RungeKuttaGeneric, Krylov, RungeKuttaChebychev ]
 time_step_method=RungeKuttaGeneric;
+; The usual RungeKuttaChebychev method contains a number of hard coded schemes for different
+; number of stages "s" and the fixed damping coefficient eps=10.0 (see Verwer and Sommeijer)
+; if you want to use another RKC scheme, you can do so by settting it up in this INI-file.
+; Provide coefficients with length "s". they are usually precomputed in python.
+RKC_custom_scheme=no;
+; (complicated) coefficients following Verwer & Sommeijer follow.
+; longest scheme is 60 stages.
+RKC_mu=;
+RKC_mu_tilde=
+RKC_nu=
+RKC_gamma_tilde=
+RKC_c=
 ; number of stages "s" for the RungeKuttaChebychev method. Memory is always 6 registers
-; independent of stages.
+; independent of stages. Default code allows up to 40 stages for eps=10.0 (hard-coded)
+; coefficients. other schemes can be defined manually above.
 s=10;
 ; if time_step_method is krylov, then you can specify the dimension of the krylov subspace
 ; below. If dynamic subspace dimensions are used, we interpret this number as the maximum
@@ -225,6 +238,9 @@ compute_flow=1;
 
 [Sponge]
 ; sponge term, used in ACM module to mimick outflow conditions for pressure waves
+; NOTE (ACM): when the sponge is used, be sure to allow for mask_time_dependent_part=1. Even
+; though the sponge function is not explicitly time-dependent, it is treated as such because
+; the sponge does not have to be at the maximum refinement level.
 use_sponge=0;
 ; shape of the sponge. the tradional form (default) is "rect", but we have a smoothed
 ; version with round corners which is called "p-norm". It has the parameter p_sponge,
@@ -317,10 +333,7 @@ smooth_mask=1;
 ; penalization factor. Can be seen as porosity, so smaller values = harder walls
 ; Note for explicit time integration, dt < C_eta
 C_eta=1e-3;
-; The mask geometry is PHYSICS MODULE SPECIFIC! Hence it depends on the module which values you can set.
-; cNS: [funnel,triangle,cylinder,rhombus]
-; ACM: [none,Insect,cylinder,two-cylinders] if "Insect", all other parameters are read from "Insect" section.
-; ConvDiff: not implemented
+; [none, Insect, cylinder, two-cylinders, rotating_cylinder] if "Insect", all other parameters are read from "Insect" section.
 geometry=triangle;
 ; center coordinate of object
 x_cntr=0.5 0.5 0;
