--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -213,19 +213,11 @@ c_0=50.0;
 nu=1e-2;
 ; damping term for pressure, see [Ohwada, Asinari, JCP2010]
 gamma_p=1;
-; use mean flow forcing or not
-forcing=1;
-; what method to use for forcing? available: accelerate / none / fixed
-; specifiy at least Dim entries for each component
-forcing_type=accelerate fixed none;
-; if mean flow forcing is used, this is the values for the mean velocities:
+; mean flow, is imposed as initial condition (if inicond=meanflow) and in the sponge
+; layer as far-field BC (if this is used!)
 u_mean_set=0.0 0.0 0.0;
 ; initial condition
 inicond=meanflow;
-; the mean pressure has no meaning in incompressible fluids, but sometimes it can
-; be nice to ensure the mean is zero, e.g., for comparison wit other codes. if set to true
-; wabbit removes the mean pressure at every time step.
-p_mean_zero=no;
 ; if inicond= pressure-blob
 beta=0.05;
 ; we can use passive scalars with the ACM. their parameters are specified in "ConvectionDiffusion" below
@@ -235,6 +227,9 @@ use_passive_scalar=0;
 ; the flow field, because the convection-diffusion physics module does not contain the
 ; penalized passive scalar eqns.
 compute_flow=1;
+;
+use_HIT_linear_forcing=1;
+
 
 [Sponge]
 ; sponge term, used in ACM module to mimick outflow conditions for pressure waves
