add new wavelet normalization

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -27,8 +27,6 @@ number_ghost_nodes=4;
 ; ACM: 3 (2D), 4 (3D)
 ; Convection: 1 (2D /3D)
 number_equations=4;
-; threshold value for thresholding wavelet coefficients
-eps=1e-3;1e-4;
 ; treelevel bounds
 max_treelevel=6;
 min_treelevel=1;
@@ -56,9 +54,20 @@ block_dist=sfc_hilbert;
 ;randomly coarse some blocks. used for testing. note we tag for coarsening
 ;only once in the first iteration
 coarsening_indicator=threshold-state-vector;
-; use normalization for eps or not? normalization is done with INFTY norm currently. default
-; is no normalization (0).
+; use normalization for eps or not? Thresholding means we control the absolute error in some norm (often Linfty norm, see below)
+; but very often, you rather want to control the relative error. So, some norm of the field is computed, such that
+; || u-u_eps || / ||u|| < eps  (using the norm specified below)
+; default=0, even though this is stupid: if you have large pressure (say u=1 and pressure=10000), then only the pressure will determine
+; the grid
 eps_normalized=1;
+; WABBIT uses interpolating, biorthogonal wavelets. These wavelets are, by default, normalized in the Linfty
+; norm. That means setting a threshold eps=1.0e-3, we guarantee that the error is < 1.0e-3 in Linfty norm.
+; For denoising, we rather need to control the L2 error, because Donohos work is applicable only to the L2 norm.
+; For CVS finally, which mimicks applying the denoising to vorticity, we need to control the H1 norm.
+; [Linfty (default), L2, H1]
+eps_norm=Linfty;
+; threshold value for thresholding wavelet coefficients. smaller values imply denser grids. Typical values are ~1e-3
+eps=1e-3;
 ; which components to use for coarsening_indicator? default is all components.
 ; active only if coarsening_indicator=threshold-state-vector. select the components, set as
 ; many as number_equations
