introduce a new default interface to parse command line arguments in postprocessing

--- a/TESTING/acm/fruitfly_adaptive/fruitfly.ini
+++ b/TESTING/acm/fruitfly_adaptive/fruitfly.ini
@@ -11,7 +11,7 @@ periodic_BC=1;
 
 [Blocks]
 ; size of each block, must be odd (17, 33, 65 etc)
-number_block_nodes=17;
+number_block_nodes=17 17 17;
 ; ghost nodes for each block. It is possible that in current versions, one can only
 ; set even values
 number_ghost_nodes=4;
