--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -16,8 +16,17 @@ periodic_BC=1 1 1;
 
 
 [Blocks]
-; size of each block, must be odd (17, 33, 65 etc),
-; if given one value this is meant for all directions, or specify value for each direction
+; size of each block, must be odd (17, 19, 33, etc), if given one value this is used
+; for all directions, or specify value for each direction
+; Note: in 04/2020, I changed the grid definition slightly to remove the redundant point
+;   from the grid. Now each point is contained exactly one time. For postprocessing, it is often
+;   desirable to include the redundant point, which is now simply the first ghost node. The code
+;   thus stores blocks of size (Bs+1), i.e., in output h5 files, the block size is EVEN. This means
+;   that the correct spacing dx is then still dx = L*2^-J / (P-1) where P=size(data,1) and P = Bs+1
+;   The files contain the spacing dx correctly. However, you must not use the Bs you set here
+;   to compute the spacing unless you change the definition of dx. So correct is:
+;   (1) the dx in the file "coords_spacing" (2) dx = L*2^-J / (P-1) where P=size(data,1)
+;   (3) dx = L*2^-J / Bs (with Bs set below)
 number_block_nodes=17 17 17;
 ; ghost nodes for each block. It is possible that in current versions, one can only
 ; set even values
