we can now run Bs even !

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -509,9 +509,9 @@ Jxy=0.0061;
 ; Body motion
 ; motion of the body: (tethered, free_flight)
 BodyMotion=tethered;
-x0=2 2 2; initial (or tethered) position
-v0=0 0 0; inital velocity
-yawpitchroll_0=45.0 -45.0 0.0; initial (or tethered) orientation in degrees
+x0=2 2 2; initial (or tethered) position. default is center of domain.
+v0=0 0 0; inital velocity. default is at rest.
+yawpitchroll_0=45.0 -45.0 0.0; initial (or tethered) body orientation in degrees
 eta0=-45.00; stroke plane angle in degrees
 DoF=000000; x,y,z,yaw,pitch,roll DoF on=1 or off=0
 ;-------------------------------------------------------------------------------
