WABBIT: FINALLY!! fix xfer bug (mesh errors when not enough memory) / prevent out-of-mem fail in sims // INSECTS: run with fractal tree, set smoothing to local, generalize kleemeier wing

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -33,12 +33,20 @@ number_ghost_nodes=4;
 ; ACM: 3 (2D), 4 (3D)
 ; Convection: 1 (2D /3D)
 number_equations=4;
-; treelevel bounds
+; treelevel bounds: determine the highest (max_treelevel) and lowest (min_treelevel) refinement
+; level of blocks. With each refinement level the grid gets refined by a factor of two. The maximum
+; resolution at max_treelevel is dx = 2^-max_treelevel * L / Bs (L:domain size, Bs: blocksize)
 max_treelevel=6;
+; sometimes you want to restrict the minimum refinement as well, for example if we run equidistant
+; simulations (which is quite rare!): in that case, max_treelevel = min_treelevel
 min_treelevel=1;
-; maximal number of trees in the forest:
+; max number of trees in the forest. A tree corresponds to a grid; this notation
+; only is important for postprocessing, i.e. using the adaptive-POD module. For running
+; simulations, you can leave the value empty - it is set automatically.
 max_forest_size=22;
-; switch for mesh adaption, 1=on, ...=off
+; Use adaptivity or not? If adapt_mesh=1 then the grid is refined before a time step,
+; the time evolution is done, and the grid is coarsened after the time step. If adapt_mesh=0
+; the grid does not change after the initial condition, and refinement/coarsening are disabled.
 adapt_mesh=1;
 ; adaptive initial conditon? i.e. create grid to respect error bounds
 ; default is same value as adapt_mesh
@@ -47,18 +55,14 @@ adapt_inicond=1;
 ; for example if one does non-adaptive non-equidistant spatial convergence tests. default is 0.
 inicond_refinements=0;
 ; block distribution for balancing (also used for start distribution)
-; [equal | sfc_z | sfc_hilbert]
-; equal -> simple uniformly distribution
+; [sfc_z | sfc_hilbert]
 ; sfc_z  -> space filling curve -> z-curve
 ; sfc_hilbert -> hilbert space filling curve
 block_dist=sfc_hilbert;
-; coarsening indicator to be used in mesh adaptation [threshold-state-vector,random,threshold-vorticity]
+; coarsening indicator to be used in mesh adaptation (=coarsening) [threshold-state-vector, random, primary-variables]
 ; threshold-state-vector: evaluates wavelet criterion on components of state vector. specify below which ones.
-; threshold-vorticity: evaluates wavelet criterion on vorticity
 ; primary-variables: only available for NStokes: converts statevector to (rho,u,v,w,p) before thresholding
-;random
-;randomly coarse some blocks. used for testing. note we tag for coarsening
-;only once in the first iteration
+; randomly coarse some blocks. used for testing. note we tag for coarsening only once in the first iteration
 coarsening_indicator=threshold-state-vector;
 ; use normalization for eps or not? Thresholding means we control the absolute error in some norm (often Linfty norm, see below)
 ; but very often, you rather want to control the relative error. So, some norm of the field is computed, such that
