--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -32,15 +32,23 @@ number_ghost_nodes=4;
 ; adjust this value for the physics module that you use.
 ; ACM: 3 (2D), 4 (3D) +  nscalars
 ; Convection: 1 (2D /3D)
-number_equations=5;
+number_equations=3;
 ; threshold value for thresholding wavelet coefficients
-eps=1e-3;1e-4;
-; treelevel bounds
-max_treelevel=3;
+eps=1e-3;
+; treelevel bounds: determine the highest (max_treelevel) and lowest (min_treelevel) refinement
+; level of blocks. With each refinement level the grid gets refined by a factor of two. The maximum
+; resolution at max_treelevel is dx = 2^-max_treelevel * L / Bs (L:domain size, Bs: blocksize)
+max_treelevel=6;
+; sometimes you want to restrict the minimum refinement as well, for example if we run equidistant
+; simulations (which is quite rare!): in that case, max_treelevel = min_treelevel
 min_treelevel=1;
-; maximal number of trees in the forest:
-max_forest_size=22
-; switch for mesh adaption, 1=on, ...=off
+; max number of trees in the forest. A tree corresponds to a grid; this notation
+; only is important for postprocessing, i.e. using the adaptive-POD module. For running
+; simulations, you can leave the value empty - it is set automatically.
+max_forest_size=;
+; Use adaptivity or not? If adapt_mesh=1 then the grid is refined before a time step,
+; the time evolution is done, and the grid is coarsened after the time step. If adapt_mesh=0
+; the grid does not change after the initial condition, and refinement/coarsening are disabled.
 adapt_mesh=1;
 ; adaptive initial conditon? i.e. create grid to respect error bounds
 ; default is same value as adapt_mesh
@@ -49,20 +57,20 @@ adapt_inicond=1;
 ; for example if one does non-adaptive non-equidistant spatial convergence tests. default is 0.
 inicond_refinements=0;
 ; block distribution for balancing (also used for start distribution)
-; [equal | sfc_z | sfc_hilbert]
-; equal -> simple uniformly distribution
+; [sfc_z | sfc_hilbert]
 ; sfc_z  -> space filling curve -> z-curve
 ; sfc_hilbert -> hilbert space filling curve
 block_dist=sfc_hilbert;
-; coarsening indicator to be used in mesh adaptation [threshold-state-vector,random,threshold-vorticity]
+; coarsening indicator to be used in mesh adaptation (=coarsening) [threshold-state-vector, random, primary-variables]
 ; threshold-state-vector: evaluates wavelet criterion on components of state vector. specify below which ones.
-; threshold-vorticity: evaluates wavelet criterion on vorticity
-;random
-;randomly coarse some blocks. used for testing. note we tag for coarsening
-;only once in the first iteration
+; primary-variables: only available for NStokes: converts statevector to (rho,u,v,w,p) before thresholding
+; randomly coarse some blocks. used for testing. note we tag for coarsening only once in the first iteration
 coarsening_indicator=threshold-state-vector;
-; use normalization for eps or not? normalization is done with INFTY norm currently. default
-; is no normalization (0). ATTENTION works only for ACM currently (TODO!)
+; use normalization for eps or not? Thresholding means we control the absolute error in some norm (often Linfty norm, see below)
+; but very often, you rather want to control the relative error. So, some norm of the field is computed, such that
+; || u-u_eps || / ||u|| < eps  (using the norm specified below)
+; default=0, even though this is stupid: if you have large pressure (say u=1 and pressure=10000), then only the pressure will determine
+; the grid
 eps_normalized=1;
 ; which components to use for coarsening_indicator? default is all components.
 ; active only if coarsening_indicator=threshold-state-vector. select the components, set as
@@ -353,6 +361,9 @@ BodyType=nobody;
 HasDetails=all; legs; antennae_proboscis; no;
 RightWing=yes;
 LeftWing=no;
+; if the insect has a fore- and hind wing, we end up with a four-winged insect
+RightWing2=no;
+LeftWing2=no;
 b_body=0.2;
 L_body=1.0;
 R_head=0.20;
@@ -366,12 +377,21 @@ gravity=1.0; negative: falling in negative z-direction
 ;-------------------------------------------------------------------------------
 ; Wing geometry (Shapes: rectangular, TwoEllipses, drosophila, drosophila_mutated,
 ; drosophila_sandberg, drosophila_maeda, flapper_sane)
+; You can also set WingShape=from_file::wing_shape.ini to read the wing geometry
+; from an INI file. In the latter case, generic Fourier and rectangular wings with
+; and without bristles are available.
 WingShape=suzuki;
 b_top=0.1; if WingShape=TwoEllipses, that's thickness of the forward one
 b_bot=0.3; if WingShape=TwoEllipses, that's thickness of the backward one
 L_chord=1.0;
+; the variable L_span is used for bounding box testing and is required only for
+; the WingShapes=[mosquito_iams, rectangular, TwoEllipses ]
 L_span=1.0;
-WingThickness=0.0417; # FOR suzukis TESTCASE, THIS IS A CONSTANT!!
+; wing tickness (from top to bottom surface, not divided by two)
+; note if you use WingShape=from_file:: then the thickness is possibly overwritten
+; by the value in this ini file. If the value is not found in the file, the one given
+; here is used.
+WingThickness=0.0417;
 ; wing inertia tensor (used to compute inertial power)
 Jxx=0.0560;
 Jyy=0.0031;
@@ -394,6 +414,20 @@ FlappingMotion_right=suzuki;
 FlappingMotion_left=suzuki;
 ; if flappingmotion=="from_file", which file to use?
 infile=bumblebee_new_kinematics.ini;
+;-------------------------------------------------------------------------------
+; The fractal tree module is a submodule of the insect module. We can also simulate
+; an insect together with a fractal tree
+fractal_tree=no;
+; a fractal tree is a list of cylinders. They are given in a simple ascii-file
+; without header, containing one cylinder per line. The colums then are
+; x1,y1,z1,x2,y2,z2,R
+; so last column is radius and not diameter. We re-define the cylinder such that the
+; origin of the very first one is at (/0,0,0/) before adding fractal_tree_x0
+fractal_tree_file=tree_data.in;
+; The fractal tree as a whole can be translated
+fractal_tree_x0=0.0, 0.0, 0.0;
+; we can scale the whole tree up as well:
+fractal_tree_scaling=1.0;
 ;-------------------------------------------------------------------------------
 
 [Debug]
