bunch of small changes for large simulations (IO fixes: check fiile exists only on root // can save IO after some elapsed walltime )

--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -114,6 +114,10 @@ time_max=1.0;
 ; a backup is written and you can resume the simulation right where it stopped. Note you can also
 ; stop a run using the file "runtime_control" (set runtime_control=save_stop;)
 walltime_max=999.9;
+; While we can save every write_time time units of the simulation, it may be desirable to save also
+; every couple of hours of runtime (for very expensive runs) so that we can be sure to be able to
+; resume the simulation with at most the loss of these hours. default unused, set value in HOURS.
+walltime_write=;
 ; number of time steps performed. if not set, default value is very large
 nt=;
 ; CFL criterium (velocity). Note the time step dt is dictated by the physics modules: some eqns (like
