--- a/TESTING/acm/bumblebee_adaptive_dry/insect.ini
+++ b/TESTING/acm/bumblebee_adaptive_dry/insect.ini
@@ -278,4 +278,5 @@ FlappingMotion_right=from_file;
 FlappingMotion_left=from_file;
 ; if flappingmotion=="from_file", which file to use?
 infile=bumblebee_new_kinematics.ini;
+smoothing_thickness=global;
 ;-------------------------------------------------------------------------------
