--- a/TESTING/acm/bumblebee_adaptive_fluid/insect.ini
+++ b/TESTING/acm/bumblebee_adaptive_fluid/insect.ini
@@ -279,3 +279,4 @@ FlappingMotion_left=from_file;
 ; if flappingmotion=="from_file", which file to use?
 infile=bumblebee_new_kinematics.ini;
 ;-------------------------------------------------------------------------------
+smoothing_thickness=global;
