mask generation: allow bypassing pruned tree technology in ini file // block_xfer gives msg on where it fails, if it does

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -440,6 +440,8 @@ penalization=1;
 ; ensure that threshold_mask is set.
 mask_time_dependent_part=1;
 mask_time_independent_part=1;
+;
+dont_use_pruned_tree_mask=1;
 ; smooth mask for penalization term [0,1]. If the obstacle moves, this flag should
 ; be set, and in static cases as well. hard masks with only 0 and 1 are deprecated but
 ; included for completeness. Note some mask functions may ignore this flag (the insects for example)
