WABBIT: can sync a subset of ghost nodes for RHS evalutaion (eg CDF44 g=6 but rhs g=3)

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -25,9 +25,13 @@ periodic_BC=1 1;
 ;   Old files generated before 04/2020 can be read just the same, but the value for Bs must be set
 ;   to the old value - 1 (before Bs=17, now Bs=16). Error is thrown otherwise.
 number_block_nodes=17 17;
-; ghost nodes for each block. It is possible that in current versions, one can only
-; set even values
+; ghost nodes for each block. you need to know this value depending on the discretization and the multiresolution
+; interpolation.
 number_ghost_nodes=4;
+; for the CDF44 wavelet, g=6 ghostnodes are required, but for a 4th order discretization only g=3. We hence allow
+; to set a smaller value of g valid only in the RHS (and not in grid refinement and coarsening). The default is the same
+; as number_ghost_nodes. You cannot set the second one larger than the first one.
+number_ghost_nodes_rhs=;
 ; number of equations / components of state vector. Note you have to properly
 ; adjust this value for the physics module that you use.
 ; ACM: 3 (2D), 4 (3D)
