ACM: insect module can generate body from superSTL file (an ascii file with precomputed normals..)

--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -366,8 +366,13 @@ length=0.3;
 ; Body geometry
 x_pivot_r=0.0 0.0 0.0; (vector) position of right wing in body system
 x_pivot_l=0.0 0.0 0.0; (vector) position of left wing in body system
-; Body (types: ellipsoid, drosophila, nobody)
+; Body (types: ellipsoid, drosophila, nobody, superSTL)
 BodyType=nobody;
+; if the body is a superSTL file, specify the filename here. Note: the geometry
+; is understood in the body frame of reference, hence 0,0,0 is the centre of the body
+; (which does in our notation imply the centre of gravity there, but this is relevant
+; only in free-fight, and the superSTL option is currently only used for tethered flight)
+BodySuperSTLfile=;
 HasDetails=all; legs; antennae_proboscis; no;
 RightWing=yes;
 LeftWing=no;
