insects: fourier wings can be damaged (i.e. a mask D(x,y) is applied)

--- a/LIB/EQUATION/insects/wing_shape_example.ini
+++ b/LIB/EQUATION/insects/wing_shape_example.ini
@@ -1,7 +1,7 @@
 [Wing]
 ; currently: fourier|kleemeier
 ; fourier: the wing shape is described in polar coordinates and the radius is encoded as fourier coefficients
-; kleemeier: the wing is rectangular (with bristles)
+; kleemeier: the wing is rectangular (possibly with bristles)
 type=fourier;
 
 ; fourier series for wing shape follow:
@@ -11,17 +11,35 @@ bi_wings=(/2.520500e-03 1.644037e-02 8.834148e-03 1.906624e-03 6.657657e-04 -2.5
 x0w=0.000000e+00;
 y0w=5.000000e-01;
 
+; if the type==kleemeier, the central membrane is rectangular, and you set its dimensions here
+B_membrane=; default 8.6/130
+L_membrane=; default 100/130
+
 ; if the wing has bristles, they are defined now.
 bristles=no;
+bristles_simplex=;
 ; if bristles, give a four column matrix (x1,y1,x2,y2,R)
-; note last entry is R and not D. 
+; note last entry is R and not D.
 bristles_coords=
+
+; the matrices for corrugation, thickness and damage mask are equidistant samples in a matrix.
+; the coordinates (y, x) are understood inside the wing bounding box (stored as Insect%corrugation_array_bbox) in the code,
+; unless here you specify a modified box
+corrugation_array_bbox=;
+
+; note the ordering of matrices (y,x)
 
 ; wing corrugation and thickness distribution
 corrugated=no;
 corrugation_array_bbox=-0.358435 0.134705 -0.051663 1.044327;
 corrugation_profile=;(/
+
+; wing thickness
 wing_thickness_distribution=constant;
 wing_thickness_profile=;(/
 ; if the thickness is constant, we can set its value here. the default is the value specified in the parameter file.
 wing_thickness_value=;
+
+; we can use a 0/1 mask to damage a wing (remove some of its surface)
+damaged=no;
+damage_mask=;(/)
