General case of insect body harmonic oscillation yawpitchroll_param

--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -402,11 +402,13 @@ Jzz=0.0591;
 Jxy=0.0061;
 ;-------------------------------------------------------------------------------
 ; Body motion
-; motion of the body: (tethered, free_flight)
+; motion of the body: (tethered, free_flight, yawpitchroll_param)
 BodyMotion=tethered;
 x0=2 2 2; initial (or tethered) position
 v0=0 0 0; inital velocity
-yawpitchroll_0=45.0 -45.0 0.0; initial (or tethered) orientation in degrees
+yawpitchroll_0=45.0 -45.0 0.0; initial (or tethered, or time-average) orientation in degrees
+yawpitchroll_a1=0.0 15.0 0.0; first cosine harmonic component used with yawpitchroll_param
+yawpitchroll_b1=0.0 10.0 0.0; first sine harmonic component used with yawpitchroll_param
 eta0=-45.00; stroke plane angle in degrees
 DoF=000000; x,y,z,yaw,pitch,roll DoF on=1 or off=0
 ;-------------------------------------------------------------------------------
