ACM: 2D flapping flight with elliptical wings

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -444,11 +444,15 @@ smooth_mask=1;
 C_eta=1e-3;
 ; The mask geometry is PHYSICS MODULE SPECIFIC! Hence it depends on the module which values you can set.
 ; cNS: [funnel,triangle,cylinder,rhombus]
-; ACM: [none,Insect,cylinder,two-cylinders] if "Insect", all other parameters are read from "Insect" section.
+; ACM: [none,Insect,cylinder,two-cylinders, two-moving-cylinders, flapping-wings, rotating_cylinder] if "Insect", all other parameters are read from "Insect" section.
 ; ConvDiff: not implemented
 geometry=triangle;
+; frequency of moving object
+freq=0.1
 ; center coordinate of object
 x_cntr=0.5 0.5 0;
+; radius of cylinder
+R_cyl=0.25;
 ; [triangle,rhombus]: angle between symmetry axis and triangle side (in degrees please)
 angle=30;
 ; [triangle,rhombus,cylinder]: length or diameter of the object
