wabbit can now deal with symmetric problems

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -13,6 +13,18 @@ domain_size=1 1;
 ; synchronization (on/off)on [x y z] domain boundaries
 ; (off (NON-PERIODIC): 0/false/yes | on (PERIODIC): 1/true/no)
 periodic_BC=1 1;
+; symmetry BC. If a problem has e.g, x symmetry (mirror axis is then the y-axis), you'd set 1 0 here.
+; symmetry still goes with periodicity in the code: we solve a symmetric periodic problem (cosine-transform)
+; this implies all BC in symmetric directions are treated symmetrically (so, at x=const=0 and x=const=Lx)
+; While it is possible to also set dirichlet BC on either, we have not currently implemented it.
+; Hint: ensure to not impose a meanflow in symmetric directions! Default: (.not. periodic_BC)
+symmetry_BC=0 0;
+; symmetry comes in two ways: for scalars (phi, pressure, density) and tangential velocity components (for
+; y symmetry, this would be ux, uz but NOT uy), we simply mirror the data. For the normal component (here: uy)
+; we mirror the component, invert the sign and also have to set uy=0 right on the line of symmetry.
+; Tell the code what is a scalar and which are vector components. For 2D ACM this would be x y 0, for 3D ACM this would be x y z 0,
+; for 3D compressible Navier_Stokes this would be 0 x y z 0 (0: scalar). The length of this vector equals number_equations. Default: 0 for all
+symmetry_vector_component=
 
 
 [Blocks]
@@ -284,14 +296,6 @@ T_swirl=5.0;
 u0x=1.0;
 u0y=1.0;
 u0z=0.0;
-; boundary condition:
-; Note: only used in case of non periodic BC
-boundary_type=constant-inflow;
-; constant-inflow: specifiy the N_scalars of the
-; boundary values at the inflow
-phi_boundary=0.0;
-
-
 
 [Navier_Stokes]
 ; choose your coordinate_system
