WABBIT: option to filter_except_maxlevel (pseudo-adaptivity) // ACM: fractal trees use precomputed bounding box; new sponges for symmetry

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -411,6 +411,9 @@ filter_freq=10;
 ; the finest blocks (those that cannot be refined anymore). If maxlevel dealiasing is FALSE and this option is TRUE,
 ; the result is equivalent to maxlevel_dealiasing TRUE, if the filter is wavelet and it is applied in every time step
 filter_only_maxlevel=no;
+; filter on all blocks, except the highest level. if adapt_mesh=0, this can be used to model a refine-evolve-coarsen
+; step without dealiasing on maxlevel. Then of course as adapt_mesh=0, no finer scales can emerge.
+filter_all_except_maxlevel=no;
 ; bogey shock detector threshold
 r_th=1e-5;
 ; if threshold is reached bogey-filter will be switch on [tanh,abs]
