ACM: 1st version of FSI (rigidSolid) // improve filtering // iterative ghost nodes (disabled by default) // small changes

--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -18,7 +18,7 @@ periodic_BC=1 1 1;
 ; this implies all BC in symmetric directions are treated symmetrically (so, at x=const=0 and x=const=Lx)
 ; While it is possible to also set dirichlet BC on either, we have not currently implemented it.
 ; Hint: ensure to not impose a meanflow in symmetric directions! Default: (.not. periodic_BC)
-symmetry_BC=0 0;
+symmetry_BC=0 0 0;
 ; symmetry comes in two ways: for scalars (phi, pressure, density) and tangential velocity components (for
 ; y symmetry, this would be ux, uz but NOT uy), we simply mirror the data. For the normal component (here: uy)
 ; we mirror the component, invert the sign and also have to set uy=0 right on the line of symmetry.
@@ -448,6 +448,27 @@ fractal_tree_x0=0.0, 0.0, 0.0;
 ; we can scale the whole tree up as well:
 fractal_tree_scaling=1.0;
 ;-------------------------------------------------------------------------------
+; Parameters that control the smoothing of the mask function
+; Discovered that this was done block based, i.e. the smoothing layer
+; had different thickness, if some blocks happened to be at different levels (and still carry
+; a part of the smoothing layer.) I don't know if that made sense, because the layer shrinks/expands then
+; and because it might be discontinous. Both options are included now, default is "as before"
+; Insect%smoothing_thickness=="local"  : smoothing_layer = c_sm * 2**-J * L/(BS-1)
+; Insect%smoothing_thickness=="global" : smoothing_layer = c_sm * 2**-Jmax * L/(BS-1)
+smoothing_thickness=; default: local
+C_smooth=; default: 1.0
+
+[FreeFlightSolver]
+; The free-flight solver is a part of the Insects module (although we can use it for
+; canonical simulations such as a falling sphere, which we think of as degenerate insect).
+; It can only be used with the ACM. If used, ACM rhs computes the aerodyn. forces and moments
+; in every RHS evaluation (several times per time step). This is not expensive but still
+; we do not do it if its not necessary.
+; Note you can use the free-flight solver only with:
+; time_step_method=RungeKuttaGeneric-FSI;
+; geometry=Insect;
+use_free_flight_solver=0;
+
 
 [Debug]
 ; check if the ghost node synchronization gives the right order, on a random
@@ -456,3 +477,5 @@ test_ghost_nodes_synch=1;
 test_treecode=0;
 ; internal testing routine for the ghost nodes: allocates HUGE amounts of memory
 check_redundant_nodes=0;
+ghost_nodes_redundant_point_coarseWins=0;
+iter_ghosts=0;
