ACM: add 2D insect model (wingsection)

--- a/LIB/EQUATION/insects/kinematics_fourier_example.ini
+++ b/LIB/EQUATION/insects/kinematics_fourier_example.ini
@@ -10,6 +10,15 @@ convention=flusi;
 units=degree;
 ; is this hermite or Fourier coefficients?
 type=fourier;
+
+
+; nfft=1 means we expect one value for each of ai,bi (and the constant a0)
+; The Fourier series evaluation in WABBIT/FLUSI is :
+; Q = a0_Q / 2 + ( a1_Q*sin(1*2*pi*t) + b1_Q*sin(1*2*pi*t) )
+;              + ( a2_Q*sin(2*2*pi*t) + b2_Q*sin(2*2*pi*t) )
+;              + ....
+; Note the unfortunate division of a0 by 2, which is an historic artifact.
+
 ;------------------------
 ; phi (positional angle)
 nfft_phi=31;
