--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -354,12 +354,17 @@ smooth_mask=1;
 ; penalization factor. Can be seen as porosity, so smaller values = harder walls
 ; Note for explicit time integration, dt < C_eta
 C_eta=1e-3;
-; [none, Insect, cylinder, two-cylinders, rotating_cylinder] if "Insect", all other parameters are read from "Insect" section.
+; [none, Insect, cylinder, two-cylinders, rotating_cylinder, 2D-wingsection] if "Insect", all other parameters are read from "Insect" section.
 geometry=triangle;
 ; center coordinate of object
 x_cntr=0.5 0.5 0;
 ; [triangle,rhombus,cylinder]: length or diameter of the object
 length=0.3;
+; if geometry==2D-wingsection then this INI file is used to determine its kinematics:
+wingsection_inifile=none.ini;
+; smoothing constant (smoothing layer is propotional to dx_min)
+; Note: insect module uses its own [Insects::C_smooth]
+C_smooth=1.5;
 
 
 [Insects]
