convection: add statistics (for testing) // wabbit: inicond and grid adapt_mesh can use different indicators

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -69,7 +69,13 @@ block_dist=sfc_hilbert;
 ; threshold-state-vector: evaluates wavelet criterion on components of state vector. specify below which ones.
 ; primary-variables: only available for NStokes: converts statevector to (rho,u,v,w,p) before thresholding
 ; random: randomly coarse some blocks. used for testing. note we tag for coarsening only once in the first iteration
+; everywhere: coarsenes the entire grid by one level. note that this is strictly speaking, only guranteed to be possible
+; if the grid has been refined "everyhwere" before.
 coarsening_indicator=threshold-state-vector;
+; sometimes, it can be useful to use a different indicator to generate the initial grid. For example, we can generate
+; some non-equidistant grid for inicond, then use coarsening_indicator=everywhere
+; default: same as coarsening_indicator
+coarsening_indicator=;
 ; use normalization for eps or not? Thresholding means we control the absolute error in some norm (often Linfty norm, see below)
 ; but very often, you rather want to control the relative error. So, some norm of the field is computed, such that
 ; || u-u_eps || / ||u|| < eps  (using the norm specified below)
