cleanup // remove redundant parameter params%harten_multiresolution // ACM: cleanup

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -75,7 +75,7 @@ coarsening_indicator=threshold-state-vector;
 ; sometimes, it can be useful to use a different indicator to generate the initial grid. For example, we can generate
 ; some non-equidistant grid for inicond, then use coarsening_indicator=everywhere
 ; default: same as coarsening_indicator
-coarsening_indicator=;
+coarsening_indicator_inicond=;
 ; use normalization for eps or not? Thresholding means we control the absolute error in some norm (often Linfty norm, see below)
 ; but very often, you rather want to control the relative error. So, some norm of the field is computed, such that
 ; || u-u_eps || / ||u|| < eps  (using the norm specified below)
@@ -292,7 +292,7 @@ blob_width=0.01;
 x0=0.5;
 y0=0.75;
 z0=0;
-; velocity field for transportation, [swirl,constant]
+; velocity field for transportation, [swirl,constant,nonlinear]
 velocity=swirl;
 ; if the velocity profile is the swirl test, one sometimes would want to compute
 ; an incomplete swirl, i.e. Tmax and Tswirl to not agree. Set T_swirl here if you want
