--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -77,7 +77,7 @@ coarsening_indicator=threshold-state-vector;
 ; sometimes, it can be useful to use a different indicator to generate the initial grid. For example, we can generate
 ; some non-equidistant grid for inicond, then use coarsening_indicator=everywhere
 ; default: same as coarsening_indicator
-coarsening_indicator=;
+coarsening_indicator_inicond=;
 ; use normalization for eps or not? Thresholding means we control the absolute error in some norm (often Linfty norm, see below)
 ; but very often, you rather want to control the relative error. So, some norm of the field is computed, such that
 ; || u-u_eps || / ||u|| < eps  (using the norm specified below)
