--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -629,3 +629,7 @@ test_ghost_nodes_synch=1;
 test_treecode=0;
 ; internal testing routine for the ghost nodes: allocates HUGE amounts of memory
 check_redundant_nodes=0;
+; internal testing routine for the ghost nodes: allocates HUGE amounts of memory
+check_redundant_nodes=0;
+ghost_nodes_redundant_point_coarseWins=0;
+iter_ghosts=0;
