--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -69,15 +69,8 @@ inicond_refinements=0;
 block_dist=sfc_hilbert;
 ; coarsening indicator to be used in mesh adaptation (=coarsening) [threshold-state-vector, random, primary-variables]
 ; threshold-state-vector: evaluates wavelet criterion on components of state vector. specify below which ones.
-; primary-variables: only available for NStokes: converts statevector to (rho,u,v,w,p) before thresholding
 ; random: randomly coarse some blocks. used for testing. note we tag for coarsening only once in the first iteration
-; everywhere: coarsenes the entire grid by one level. note that this is strictly speaking, only guranteed to be possible
-; if the grid has been refined "everyhwere" before.
 coarsening_indicator=threshold-state-vector;
-; sometimes, it can be useful to use a different indicator to generate the initial grid. For example, we can generate
-; some non-equidistant grid for inicond, then use coarsening_indicator=everywhere
-; default: same as coarsening_indicator
-coarsening_indicator_inicond=;
 ; use normalization for eps or not? Thresholding means we control the absolute error in some norm (often Linfty norm, see below)
 ; but very often, you rather want to control the relative error. So, some norm of the field is computed, such that
 ; || u-u_eps || / ||u|| < eps  (using the norm specified below)
@@ -361,17 +354,13 @@ smooth_mask=1;
 ; penalization factor. Can be seen as porosity, so smaller values = harder walls
 ; Note for explicit time integration, dt < C_eta
 C_eta=1e-3;
-; [none, Insect, cylinder, two-cylinders, rotating_cylinder, 2D-wingsection] if "Insect", all other parameters are read from "Insect" section.
+; [none, Insect, cylinder, two-cylinders, rotating_cylinder, sphere-fixed, sphere-free] 
+; if "Insect" all other parameters are read from "Insect" section.
 geometry=triangle;
 ; center coordinate of object
 x_cntr=0.5 0.5 0;
-; [triangle,rhombus,cylinder]: length or diameter of the object
+; [triangle,rhombus,cylinder, sphere]: length or diameter of the object
 length=0.3;
-; if geometry==2D-wingsection then this INI file is used to determine its kinematics:
-wingsection_inifile=none.ini;
-; smoothing constant (smoothing layer is propotional to dx_min)
-; Note: insect module uses its own [Insects::C_smooth]
-C_smooth=1.5;
 
 
 [Insects]
@@ -380,7 +369,7 @@ C_smooth=1.5;
 ; Body geometry
 x_pivot_r=0.0 0.0 0.0; (vector) position of right wing in body system
 x_pivot_l=0.0 0.0 0.0; (vector) position of left wing in body system
-; Body (types: ellipsoid, drosophila, nobody, superSTL)
+; Body (types: ellipsoid, drosophila, nobody, superSTL, sphere) if free sphere in geometry use sphere
 BodyType=nobody;
 ; if the body is a superSTL file, specify the filename here. Note: the geometry
 ; is understood in the body frame of reference, hence 0,0,0 is the centre of the body
