ACM: update 2D wingsection // ACM: copmute penalization power

--- a/LIB/EQUATION/ACMnew/wingsection_inifile.ini
+++ b/LIB/EQUATION/ACMnew/wingsection_inifile.ini
@@ -4,17 +4,19 @@
 ; Length of section is unity (chordlength).
 ; Thickness is specified here.
 ;
-;                            o  (x0,y0)
+;
 ;                          /
 ;  y                     /  (alpha)
 ;  ^                   /
-;  |
+;  |                 o  (x0,y0)
 ;  |
 ;  -----> x
+;
+; alpha = 0 means the section is aligned with the X-axis
 
 type=Fourier;
 
-; nfft=1 means we expect one value for each of ai,bi (and the constant a0)
+; nfft=1 means we expect one value for each of ai, bi (and the constant a0)
 ; The Fourier series evaluation in WABBIT/FLUSI is :
 ; Q = a0_Q / 2 + ( a1_Q*sin(1*2*pi*t) + b1_Q*sin(1*2*pi*t) )
 ;              + ( a2_Q*sin(2*2*pi*t) + b2_Q*sin(2*2*pi*t) )
@@ -34,6 +36,7 @@ ai_y0=;
 bi_y0=;
 
 ; input of alpha (fourier coefficients) is in DEGREE
+; alpha = 0 means the section is aligned with the X-axis
 a0_alpha=;
 ai_alpha=;
 bi_alpha=;
