--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -368,7 +368,8 @@ x_cntr=0.5 0.5 0;
 ; [triangle,rhombus,cylinder]: length or diameter of the object
 length=0.3;
 ; if geometry==2D-wingsection then this INI file is used to determine its kinematics:
-wingsection_inifile=none.ini;
+; this is a vector, we can run many wingsections (typically, two are used)
+wingsection_inifiles=none.ini;
 ; smoothing constant (smoothing layer is propotional to dx_min)
 ; Note: insect module uses its own [Insects::C_smooth]
 C_smooth=1.5;
