--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -126,7 +126,8 @@ walltime_max=999.9;
 ; every couple of hours of runtime (for very expensive runs) so that we can be sure to be able to
 ; resume the simulation with at most the loss of these hours. default unused, set value in HOURS.
 walltime_write=;
-; number of time steps performed. if not set, default value is very large
+; number of time steps to be performed. simulation stops afterwards.
+; if not set, default value is very large (so not a restriction by default)
 nt=;
 ; CFL criterium (velocity). Note the time step dt is dictated by the physics modules: some eqns (like
 ; the heat eqn, which is not implemented) may not even have a CFL restriction.
@@ -144,11 +145,14 @@ CFL_nu=;
 ; number of time steps [fixed_freq], or after a physical time interval [fixed_time]
 write_method=fixed_time;
 ; if write_method=fixed_freq:
-; write frequency for output, choose very large number for disabling output on disk
+; interval (in time steps) for HDF5 output, choose very large number for disabling output on disk
 write_freq=2;
 ; if write_method=fixed_time:
-; write time for output
-write_time=100.05;
+; interval (in time units) for HDF5 output
+write_time=0.1;
+; do not save any output before this time is reached (useful to not store transient data,
+; e.g. while reaching a stable periodic state). default is 0.0. Note walltime_write is not affected by this setting
+write_time_first=0.0;
 ; fixed time step. if the value is greater 0.0, then the time step is fixed no matter what.
 ; the setting from the physics modules, which usually decide about dt, are ignored and over-
 ; written. The default is 0.0, so not used. NOTE: WABBIT still will adjust dt to precisely match
