changes in convection-diffusion including reaction now

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -289,14 +289,17 @@ N_scalars=1;
 ; note you need to specify one value per scalar field for ALL the below parameters
 ; viscosity. if nu<1.0e-10 (or 0.0), diffusion is disabled.
 nu=0.0e-6;
-; initial condition for the scalar(s)
+; adding a KKP reaction term:  gamma * phi^2(phi-1)
+; if gamma<1.0e-10 (or 0.0), reaction is disabled.
+gamma=0.0
+; initial condition for the scalar(s) [circle,blob,]
 inicond=blob;
 blob_width=0.01;
 ; position of blob
 x0=0.5;
 y0=0.75;
 z0=0;
-; velocity field for transportation, [swirl,constant,nonlinear]
+; velocity field for transportation, [swirl,constant,nonlinear,circular,vortex-pair]
 velocity=swirl;
 ; if the velocity profile is the swirl test, one sometimes would want to compute
 ; an incomplete swirl, i.e. Tmax and Tswirl to not agree. Set T_swirl here if you want
@@ -306,6 +309,10 @@ T_swirl=5.0;
 u0x=1.0;
 u0y=1.0;
 u0z=0.0;
+; initial vorticity [for velocity=vortex-pair]
+w0=30.0 30.0;
+; vorticity decay constant
+tau=0.2;
 
 [Navier_Stokes]
 ; choose your coordinate_system
