progress on operator reconstruction // read grid from file // convDiff saves max scalar and noise initial condition

--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -59,6 +59,10 @@ adapt_mesh=1;
 ; adaptive initial conditon? i.e. create grid to respect error bounds
 ; default is same value as adapt_mesh
 adapt_inicond=1;
+; sometimes we want to use a fixed, pre-defined grid for the initial condition, but still set an
+; analytical inicond. Thus, if a file below is specified, the grid is read from this file, and not
+; adapted, even if adapt_inicond=1
+inicond_grid_from_file=;
 ; in some situations, it is necessary to create the intial grid, and then refine it for a couple of times.
 ; for example if one does non-adaptive non-equidistant spatial convergence tests. default is 0.
 inicond_refinements=0;
