reconstruct evolution operator

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -415,7 +415,7 @@ wavelet=CDF4,4;
 
 
 [Discretization]
-; order of derivatives [ FD_2nd_central | FD_4th_central_optimized ]
+; order of derivatives [ FD_2nd_central | FD_4th_central_optimized | FD_4th_central ]
 order_discretization=FD_4th_central_optimized;
 ; order of refinement predictor [ multiresolution_4th | multiresolution_2nd ]
 order_predictor=multiresolution_4th;
@@ -443,7 +443,6 @@ switch=tanh;
 detector_method=divU
 ; write out sigma for every n filter iterations (if 0 then sigma is not written out)
 save_filter_strength=1;
-
 
 [VPM]
 ; Volume penalization method to take obstacles into account without adapting the
