temp. merge of newGhostNodes into master branch, for testing of operator eigenvalues Needs to be cleaned if one is ever to use this branch (unlikely)

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -28,6 +28,7 @@ symmetry_vector_component=
 
 
 [Blocks]
+redundant_grid=1;
 ; size of each block, must be odd (17, 19, 33, etc), if given one value this is used
 ; for all directions, or specify value for each direction
 number_block_nodes=17 17;
