--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -57,10 +57,6 @@ adapt_mesh=1;
 ; adaptive initial conditon? i.e. create grid to respect error bounds
 ; default is same value as adapt_mesh
 adapt_inicond=1;
-; sometimes we want to use a fixed, pre-defined grid for the initial condition, but still set an
-; analytical inicond. Thus, if a file below is specified, the grid is read from this file, and not
-; adapted, even if adapt_inicond=1
-inicond_grid_from_file=;
 ; in some situations, it is necessary to create the intial grid, and then refine it for a couple of times.
 ; for example if one does non-adaptive non-equidistant spatial convergence tests. default is 0.
 inicond_refinements=0;
@@ -130,8 +126,7 @@ walltime_max=999.9;
 ; every couple of hours of runtime (for very expensive runs) so that we can be sure to be able to
 ; resume the simulation with at most the loss of these hours. default unused, set value in HOURS.
 walltime_write=;
-; number of time steps to be performed. simulation stops afterwards.
-; if not set, default value is very large (so not a restriction by default)
+; number of time steps performed. if not set, default value is very large
 nt=;
 ; CFL criterium (velocity). Note the time step dt is dictated by the physics modules: some eqns (like
 ; the heat eqn, which is not implemented) may not even have a CFL restriction.
@@ -149,14 +144,11 @@ CFL_nu=;
 ; number of time steps [fixed_freq], or after a physical time interval [fixed_time]
 write_method=fixed_time;
 ; if write_method=fixed_freq:
-; interval (in time steps) for HDF5 output, choose very large number for disabling output on disk
+; write frequency for output, choose very large number for disabling output on disk
 write_freq=2;
 ; if write_method=fixed_time:
-; interval (in time units) for HDF5 output
-write_time=0.1;
-; do not save any output before this time is reached (useful to not store transient data,
-; e.g. while reaching a stable periodic state). default is 0.0. Note walltime_write is not affected by this setting
-write_time_first=0.0;
+; write time for output
+write_time=100.05;
 ; fixed time step. if the value is greater 0.0, then the time step is fixed no matter what.
 ; the setting from the physics modules, which usually decide about dt, are ignored and over-
 ; written. The default is 0.0, so not used. NOTE: WABBIT still will adjust dt to precisely match
@@ -293,17 +285,14 @@ N_scalars=1;
 ; note you need to specify one value per scalar field for ALL the below parameters
 ; viscosity. if nu<1.0e-10 (or 0.0), diffusion is disabled.
 nu=0.0e-6;
-; adding a KKP reaction term:  gamma * phi^2(phi-1)
-; if gamma<1.0e-10 (or 0.0), reaction is disabled.
-gamma=0.0
-; initial condition for the scalar(s) [circle,blob,]
+; initial condition for the scalar(s)
 inicond=blob;
 blob_width=0.01;
 ; position of blob
 x0=0.5;
 y0=0.75;
 z0=0;
-; velocity field for transportation, [swirl,constant,nonlinear,circular,vortex-pair]
+; velocity field for transportation, [swirl,constant,nonlinear]
 velocity=swirl;
 ; if the velocity profile is the swirl test, one sometimes would want to compute
 ; an incomplete swirl, i.e. Tmax and Tswirl to not agree. Set T_swirl here if you want
@@ -313,10 +302,6 @@ T_swirl=5.0;
 u0x=1.0;
 u0y=1.0;
 u0z=0.0;
-; initial vorticity [for velocity=vortex-pair]
-w0=30.0 30.0;
-; vorticity decay constant
-tau=0.2;
 
 [Navier_Stokes]
 ; choose your coordinate_system
@@ -415,7 +400,7 @@ wavelet=CDF4,4;
 
 
 [Discretization]
-; order of derivatives [ FD_2nd_central | FD_4th_central_optimized | FD_4th_central ]
+; order of derivatives [ FD_2nd_central | FD_4th_central_optimized ]
 order_discretization=FD_4th_central_optimized;
 ; order of refinement predictor [ multiresolution_4th | multiresolution_2nd ]
 order_predictor=multiresolution_4th;
@@ -443,6 +428,7 @@ switch=tanh;
 detector_method=divU
 ; write out sigma for every n filter iterations (if 0 then sigma is not written out)
 save_filter_strength=1;
+
 
 [VPM]
 ; Volume penalization method to take obstacles into account without adapting the
