--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -59,10 +59,6 @@ adapt_mesh=1;
 ; adaptive initial conditon? i.e. create grid to respect error bounds
 ; default is same value as adapt_mesh
 adapt_inicond=1;
-; sometimes we want to use a fixed, pre-defined grid for the initial condition, but still set an
-; analytical inicond. Thus, if a file below is specified, the grid is read from this file, and not
-; adapted, even if adapt_inicond=1
-inicond_grid_from_file=;
 ; in some situations, it is necessary to create the intial grid, and then refine it for a couple of times.
 ; for example if one does non-adaptive non-equidistant spatial convergence tests. default is 0.
 inicond_refinements=0;
@@ -133,8 +129,7 @@ walltime_max=999.9;
 ; every couple of hours of runtime (for very expensive runs) so that we can be sure to be able to
 ; resume the simulation with at most the loss of these hours. default unused, set value in HOURS.
 walltime_write=;
-; number of time steps to be performed. simulation stops afterwards.
-; if not set, default value is very large (so not a restriction by default)
+; number of time steps performed. if not set, default value is very large
 nt=;
 ; CFL criterium (velocity). Note the time step dt is dictated by the physics modules: some eqns (like
 ; the heat eqn, which is not implemented) may not even have a CFL restriction.
@@ -152,14 +147,11 @@ CFL_nu=;
 ; number of time steps [fixed_freq], or after a physical time interval [fixed_time]
 write_method=fixed_time;
 ; if write_method=fixed_freq:
-; interval (in time steps) for HDF5 output, choose very large number for disabling output on disk
+; write frequency for output, choose very large number for disabling output on disk
 write_freq=2;
 ; if write_method=fixed_time:
-; interval (in time units) for HDF5 output
-write_time=0.1;
-; do not save any output before this time is reached (useful to not store transient data,
-; e.g. while reaching a stable periodic state). default is 0.0. Note walltime_write is not affected by this setting
-write_time_first=0.0;
+; write time for output
+write_time=0.01;
 ; fixed time step. if the value is greater 0.0, then the time step is fixed no matter what.
 ; the setting from the physics modules, which usually decide about dt, are ignored and over-
 ; written. The default is 0.0, so not used. NOTE: WABBIT still will adjust dt to precisely match
@@ -368,7 +360,7 @@ smooth_mask=1;
 ; penalization factor. Can be seen as porosity, so smaller values = harder walls
 ; Note for explicit time integration, dt < C_eta
 C_eta=1e-3;
-; [none, Insect, cylinder, two-cylinders, rotating_cylinder, 2D-wingsection, sphere-fixed, sphere-free]
+; [none, Insect, cylinder, two-cylinders, rotating_cylinder, 2D-wingsection, sphere-fixed, sphere-free] 
 ; if "Insect" all other parameters are read from "Insect" section.
 geometry=triangle;
 ; center coordinate of object
